docs: update README.md to include JitPack link and correct jitpack.yml environment path

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,4 +3,4 @@ before_install:
 install:
   - .mise/mise exec -- ./mill __.publishM2Local
 env:
-  MISE_TRUSTED_CONFIG_PATHS: /build
+  MISE_TRUSTED_CONFIG_PATHS: /home/jitpack/build
