fix: update .mise.toml and jitpack.yml for local publishing and improve logging in JibInJvmWorker

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,6 +1,6 @@
 before_install:
   - .mise/mise install
 install:
-  - .mise/mise exec -- ./mill __.publishM2Local
+  - .mise/mise run publish:local
 env:
   MISE_TRUSTED_CONFIG_PATHS: /home/jitpack/build
