fix: update mill version to 0.11.13 and correct default version in envVersion

--- a/.mise.toml
+++ b/.mise.toml
@@ -3,3 +3,6 @@ java = "17"
 
 [tasks."publish:local"]
 run = "./mill __.publishM2Local"
+
+[tasks.publish]
+run = "./mill mill.scalalib.PublishModule/"
